NetBSD Problem Report #42721

From www@NetBSD.org  Tue Feb  2 09:59:19 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id CF32E63B9FC
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  2 Feb 2010 09:59:19 +0000 (UTC)
Message-Id: <20100202095919.9B51D63B886@www.NetBSD.org>
Date: Tue,  2 Feb 2010 09:59:19 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing defined COMPAT13 and COMPAT50 in uvm_swap.c
X-Send-Pr-Version: www-1.0

>Number:         42721
>Category:       kern
>Synopsis:       Missing defined COMPAT13 and COMPAT50 in uvm_swap.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 02 10:00:01 +0000 2010
>Closed-Date:    Tue Feb 02 15:02:49 +0000 2010
>Last-Modified:  Tue Feb 02 15:05:01 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Missing defined COMPAT13 and COMPAT50 in uvm_swap.c found by cppcheck.
>How-To-Repeat:

>Fix:
diff -u -r1.147 uvm_swap.c
--- sys/uvm/uvm_swap.c	21 Oct 2009 21:12:07 -0000	1.147
+++ sys/uvm/uvm_swap.c	2 Feb 2010 08:42:14 -0000
@@ -788,6 +788,8 @@
 				memcpy(&sep50->se50_path, sdp->swd_path,
 				       sizeof sep50->se50_path);
 				sep = (struct swapent *)(sep50 + 1);
+#endif
+#if defined(COMPAT_13) || defined(COMPAT_50) 
 			}
 #endif
 			count++;

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Tue, 02 Feb 2010 15:02:49 +0000
State-Changed-Why:
Fixed, thanks!


From: Thomas Klausner <wiz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42721 CVS commit: src/sys/uvm
Date: Tue, 2 Feb 2010 15:00:34 +0000

 Module Name:	src
 Committed By:	wiz
 Date:		Tue Feb  2 15:00:34 UTC 2010

 Modified Files:
 	src/sys/uvm: uvm_swap.c

 Log Message:
 Missing 'if defined COMPAT13 or COMPAT50' in uvm_swap.c found by cppcheck
 and reported by Henning Petersen in PR 42721.


 To generate a diff of this commit:
 cvs rdiff -u -r1.147 -r1.148 src/sys/uvm/uvm_swap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.