Missing 'if defined COMPAT13 or COMPAT50' in uvm_swap.c found by cppcheck and reported by Henning Petersen in PR 42721.